--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
   "author": "Jesper Gustafsson",
   "license": "MIT",
   "dependencies": {
+    "chokidar": "3.2.1",
     "connected-react-router": "6.5.2",
     "electron": "6.0.0",
     "extract-zip": "1.6.7",
     "fast-xml-parser": "3.12.19",
     "follow-redirects": "1.7.0",
     "fs-extra": "8.1.0",
+    "node-7z": "^1.1.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "7.1.0",
@@ -55,6 +57,7 @@
     "yauzl": "2.10.0"
   },
   "devDependencies": {
+    "@types/chokidar": "2.1.3",
     "@types/extract-zip": "1.6.2",
     "@types/fs-extra": "8.0.0",
     "@types/jest": "24.0.17",
@@ -81,5 +84,8 @@
     "typescript": "3.5.3",
     "webpack": "4.39.1",
     "webpack-cli": "3.3.6"
+  },
+  "optionalDependencies": {
+    "fsevents": "2.1.0"
   }
 }
