--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "chokidar": "3.2.1",
     "connected-react-router": "6.5.2",
     "electron": "6.0.0",
-    "extract-zip": "1.6.7",
     "fast-xml-parser": "3.12.19",
     "follow-redirects": "1.7.0",
     "fs-extra": "8.1.0",
@@ -53,8 +52,7 @@
     "utility-types": "3.7.0",
     "uuid": "3.3.2",
     "uuid-validate": "0.0.3",
-    "which": "1.3.1",
-    "yauzl": "2.10.0"
+    "which": "1.3.1"
   },
   "devDependencies": {
     "@types/chokidar": "2.1.3",
@@ -70,7 +68,6 @@
     "@types/uuid": "3.4.5",
     "@types/uuid-validate": "0.0.1",
     "@types/which": "1.3.1",
-    "@types/yauzl": "2.9.1",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
     "cross-env": "5.2.0",
