--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "fast-xml-parser": "3.12.19",
     "follow-redirects": "1.7.0",
     "fs-extra": "8.1.0",
-    "node-7z": "^1.1.1",
+    "node-7z": "1.1.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "7.1.0",
