--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "author": "Jesper Gustafsson",
   "license": "MIT",
   "dependencies": {
+    "@types/ws": "6.0.3",
     "connected-react-router": "6.5.2",
     "electron": "6.0.0",
     "fast-xml-parser": "3.12.19",
@@ -50,6 +51,7 @@
     "uuid": "3.3.2",
     "uuid-validate": "0.0.3",
     "which": "1.3.1",
+    "ws": "7.2.0",
     "yauzl": "2.10.0"
   },
   "devDependencies": {
