--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "typesafe-actions": "4.4.2",
     "uuid": "3.3.2",
     "uuid-validate": "0.0.3",
-    "which": "1.3.1"
+    "which": "1.3.1",
+    "yaml": "1.7.2"
   },
   "devDependencies": {
     "@types/chokidar": "2.1.3",
@@ -66,6 +67,7 @@
     "@types/uuid": "3.4.5",
     "@types/uuid-validate": "0.0.1",
     "@types/which": "1.3.1",
+    "@types/yaml": "1.2.0",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
     "cross-env": "5.2.0",
