--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "uuid": "3.3.2",
     "uuid-validate": "0.0.3",
     "which": "1.3.1",
-    "yaml": "1.7.2"
+    "yaml": "^1.7.2"
   },
   "devDependencies": {
     "@types/chokidar": "2.1.3",
