feat: CurateBox formatting and Tags switchover

--- a/tests/static/curate/format/meta_example.yaml
+++ b/tests/static/curate/format/meta_example.yaml
@@ -8,7 +8,7 @@ Release Date: 2019-01-01
 Version: 1.0.0
 Languages: en
 Extreme: Yes
-Tags: List; Of; Genres
+Tags: List; Of; Tags
 Source: http://example.com/
 Platform: HTML5
 Status: Playable
