--- a/package.json
+++ b/package.json
@@ -68,11 +68,12 @@
     "@types/uuid-validate": "0.0.1",
     "@types/which": "1.3.1",
     "@types/yaml": "1.2.0",
-    "@typescript-eslint/eslint-plugin": "1.13.0",
-    "@typescript-eslint/parser": "1.13.0",
+    "@typescript-eslint/eslint-plugin": "^2.6.1",
+    "@typescript-eslint/parser": "^2.6.1",
     "cross-env": "5.2.0",
     "electron-packager": "14.0.4",
     "eslint": "6.1.0",
+    "eslint-plugin-react": "^7.16.0",
     "gulp": "4.0.2",
     "jest": "24.8.0",
     "ts-jest": "24.0.2",
