--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "flashpoint-launcher",
-  "version": "0.0.1",
+  "version": "7.0.0-snapshot",
   "description": "A desktop application used to browse, manage and play games from BlueMaxima's Flashpoint",
-  "main": "main/index.js",
+  "main": "build/main/index.js",
   "scripts": {
     "start": "npx electron ./build/main/index.js",
     "build": "npx gulp build",
@@ -29,14 +29,19 @@
     "release:linux:static": "npx cross-env-shell STATIC_INSTALL=1 NODE_ENV=production \"npm run build && npm run pack:linux\"",
     "release:win32:static": "npx cross-env-shell STATIC_INSTALL=1 NODE_ENV=production \"npm run build && npm run pack:win32\"",
     "release:darwin:static": "npx cross-env-shell STATIC_INSTALL=1 NODE_ENV=production \"npm run build && npm run pack:darwin\"",
-    "release:all:static": "npx cross-env-shell STATIC_INSTALL=1 NODE_ENV=production \"npm run build && npm run pack:all\""
+    "release:all:static": "npx cross-env-shell STATIC_INSTALL=1 NODE_ENV=production \"npm run build && npm run pack:all\"",
+    "publish": "npx cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack\"",
+    "publish:linux": "npx cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:linux\"",
+    "publish:win32": "npx cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:win32\"",
+    "publish:darwin": "npx cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:darwin\"",
+    "publish:all": "npx cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:all\""
   },
   "author": "Jesper Gustafsson",
   "license": "MIT",
   "dependencies": {
     "chokidar": "3.2.1",
     "connected-react-router": "6.5.2",
-    "electron": "6.0.0",
+    "electron-updater": "^4.2.0",
     "fast-xml-parser": "3.12.19",
     "follow-redirects": "1.7.0",
     "fs-extra": "8.1.0",
@@ -49,14 +54,16 @@
     "redux": "4.0.4",
     "redux-devtools-extension": "2.13.8",
     "typesafe-actions": "4.4.2",
+    "uglifyjs": "^2.4.11",
     "uuid": "3.3.2",
     "uuid-validate": "0.0.3",
     "which": "1.3.1",
-    "yaml": "1.7.2",
-    "ws": "7.2.0"
+    "ws": "7.2.0",
+    "yaml": "1.7.2"
   },
   "devDependencies": {
     "@types/chokidar": "2.1.3",
+    "@types/electron-builder": "^2.8.0",
     "@types/fs-extra": "8.0.0",
     "@types/jest": "24.0.17",
     "@types/node": "12.7.0",
@@ -68,12 +75,13 @@
     "@types/uuid": "3.4.5",
     "@types/uuid-validate": "0.0.1",
     "@types/which": "1.3.1",
-    "@types/yaml": "1.2.0",
     "@types/ws": "6.0.3",
+    "@types/yaml": "1.2.0",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
     "cross-env": "5.2.0",
-    "electron-packager": "14.0.4",
+    "electron": "6.0.0",
+    "electron-builder": "^21.2.0",
     "eslint": "6.1.0",
     "eslint-plugin-react": "7.16.0",
     "gulp": "4.0.2",
