--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "dependencies": {
     "chokidar": "3.2.1",
     "connected-react-router": "6.5.2",
-    "electron-updater": "^4.2.0",
+    "electron-updater": "4.2.0",
     "fast-xml-parser": "3.12.19",
     "follow-redirects": "1.7.0",
     "fs-extra": "8.1.0",
@@ -54,7 +54,6 @@
     "redux": "4.0.4",
     "redux-devtools-extension": "2.13.8",
     "typesafe-actions": "4.4.2",
-    "uglifyjs": "^2.4.11",
     "uuid": "3.3.2",
     "uuid-validate": "0.0.3",
     "which": "1.3.1",
@@ -63,7 +62,7 @@
   },
   "devDependencies": {
     "@types/chokidar": "2.1.3",
-    "@types/electron-builder": "^2.8.0",
+    "@types/electron-builder": "2.8.0",
     "@types/fs-extra": "8.0.0",
     "@types/jest": "24.0.17",
     "@types/node": "12.7.0",
