feat: Setup screen + Curation override fix

--- a/src/renderer/tsconfig.json
+++ b/src/renderer/tsconfig.json
@@ -5,6 +5,6 @@
   "extends": "../../tsconfig.json",
   "include": [
     "../../typings/**/*",
-    "./**/*"
+    "./**/*", "../shared/utils/upgrade.ts", "../shared/upgrade/UpgradeFile.ts"
   ]
 }
