feat: add base support for hosting / connecting to a remote back
- Program arguments used when executing the launcher will now be parsed.
- Two argument options have been added: connect-remote and host-remote
- The first lets you connect to a "back" process by entering the IP and
port (ex. "connect-remote=192.168.1.105:12001").
- The second lets you host a "back" that can be connected to (ex.
"host-remote=true").
- The secret used for authenticating connections to the back is now
stored and loaded from a file "secret.txt". This lets the user share
the secret with anyone they want to be able to connect.

--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,11 @@ package-lock.json
 # Temp
 /temp
 
-# Config & Preferences (created during testing)
+# Launcher files (created during testing)
 /config.json
 /preferences.json
 /.installed
 /.version
 /upgrade.json
 /upgrade_launcher.json
+/secret.txt
