--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/yaml": "1.2.0",
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
+    "coveralls": "3.0.9",
     "cross-env": "5.2.0",
     "electron": "6.1.5",
     "electron-builder": "21.2.0",
