refactor: Moved to absolute imports
fix: Fixed ConfigFile not parsing themeFolderPath

--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,9 @@ package-lock.json
 /preferences.json
 /.installed
 /.version
-/upgrade.json
-/upgrade_launcher.json
 /secret.txt
+
+# Jest related files
 /.coveralls.yml
 /coverage
+/tests/result
