--- a/package.json
+++ b/package.json
@@ -80,7 +80,10 @@
     "jest": "24.8.0",
     "ts-jest": "24.0.2",
     "ts-loader": "6.0.4",
+    "ts-transform-paths": "2.0.0",
+    "tsconfig-paths-webpack-plugin": "3.2.0",
     "tslint": "5.18.0",
+    "ttypescript": "1.5.10",
     "typescript": "3.5.3",
     "webpack": "4.39.1",
     "webpack-cli": "3.3.6"
