--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -1,10 +1,4 @@
-on:
-  pull_request:
-    branches: 
-      - master
-  push:
-    branches:
-      - master
+on: [push, pull_request]
 
 name: Test Coveralls
 
