feat: More Tests

--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
   "author": "Jesper Gustafsson",
   "license": "MIT",
   "dependencies": {
+    "@types/mime": "2.0.1",
     "chokidar": "3.2.1",
     "connected-react-router": "6.5.2",
     "electron-updater": "4.2.0",
     "fast-xml-parser": "3.12.19",
     "follow-redirects": "1.7.0",
     "fs-extra": "8.1.0",
+    "mime": "2.4.4",
     "node-7z": "1.1.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
@@ -78,6 +80,8 @@
     "eslint-plugin-react": "7.16.0",
     "gulp": "4.0.2",
     "jest": "24.8.0",
+    "jest-websocket-mock": "2.0.1",
+    "mock-socket": "9.0.3",
     "ts-jest": "24.0.2",
     "ts-loader": "6.0.4",
     "ts-transform-paths": "2.0.0",
