--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
   "author": "Jesper Gustafsson",
   "license": "MIT",
   "dependencies": {
-    "@types/mime": "2.0.1",
     "chokidar": "3.2.1",
     "connected-react-router": "6.5.2",
     "electron-updater": "4.2.0",
@@ -57,9 +56,13 @@
   "devDependencies": {
     "@types/chokidar": "2.1.3",
     "@types/electron-builder": "2.8.0",
+    "@types/enzyme": "^3.10.4",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/enzyme-to-json": "^1.5.3",
     "@types/fs-extra": "8.0.0",
     "@types/jest": "24.0.17",
     "@types/node": "12.7.0",
+    "@types/mime": "2.0.1",
     "@types/react": "16.8.24",
     "@types/react-dom": "16.8.5",
     "@types/react-redux": "7.1.1",
@@ -76,6 +79,9 @@
     "cross-env": "5.2.0",
     "electron": "6.1.5",
     "electron-builder": "21.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.3",
     "eslint": "6.1.0",
     "eslint-plugin-react": "7.16.0",
     "gulp": "4.0.2",
