--- a/package.json
+++ b/package.json
@@ -56,9 +56,9 @@
   "devDependencies": {
     "@types/chokidar": "2.1.3",
     "@types/electron-builder": "2.8.0",
-    "@types/enzyme": "^3.10.4",
-    "@types/enzyme-adapter-react-16": "^1.0.5",
-    "@types/enzyme-to-json": "^1.5.3",
+    "@types/enzyme": "3.10.4",
+    "@types/enzyme-adapter-react-16": "1.0.5",
+    "@types/enzyme-to-json": "1.5.3",
     "@types/fs-extra": "8.0.0",
     "@types/jest": "24.0.17",
     "@types/node": "12.7.0",
@@ -79,9 +79,9 @@
     "cross-env": "5.2.0",
     "electron": "6.1.5",
     "electron-builder": "21.2.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "enzyme-to-json": "^3.4.3",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.2",
+    "enzyme-to-json": "3.4.3",
     "eslint": "6.1.0",
     "eslint-plugin-react": "7.16.0",
     "gulp": "4.0.2",
