feat: Database Systems
- Typescript updated to 3.7.5
- npm script 'rebuild' must be run before first time
- Lots of things not working, check trello

Signed-off-by: Colin Berry <colinb969@gmail.com>

--- a/src/shared/tsconfig.json
+++ b/src/shared/tsconfig.json
@@ -5,6 +5,6 @@
   "extends": "../../tsconfig.json",
   "include": [
     "../../typings/**/*",
-    "./**/*"
+    "./**/*", "../database/entity/Game.ts", "../database/entity/AdditionalApp.ts"
   ]
 }
