--- a/package.json
+++ b/package.json
@@ -1,104 +1,112 @@
 {
-  "name": "flashpoint-launcher",
-  "version": "7.0.0",
-  "description": "A desktop application used to browse, manage and play games from BlueMaxima's Flashpoint",
-  "main": "build/main/index.js",
-  "config": {
-    "installed": false
-  },
-  "scripts": {
-    "start": "npx electron ./build/main/index.js",
-    "build": "npx gulp build",
-    "watch": "npx gulp watch",
-    "pack": "npx gulp pack",
-    "test": "npx jest",
-    "lint": "npx eslint ./src/**/*.{ts,tsx} ./tests/**/*.ts ./gulpfile.js",
-    "pack:linux": "npx cross-env PACK_PLATFORM=linux PACK_ARCH=x64 npx gulp pack",
-    "pack:win32": "npx cross-env PACK_PLATFORM=win32 PACK_ARCH=ia32 npx gulp pack",
-    "pack:darwin": "npx cross-env PACK_PLATFORM=darwin PACK_ARCH=x64 npx gulp pack",
-    "pack:all": "npx cross-env PACK_PLATFORM=all PACK_ARCH=all npx gulp pack",
-    "release": "npx cross-env-shell NODE_ENV=production \"npm run build && npm run pack\"",
-    "release:linux": "npx cross-env-shell NODE_ENV=production \"npm run build && npm run pack:linux\"",
-    "release:win32": "npx cross-env-shell NODE_ENV=production \"npm run build && npm run pack:win32\"",
-    "release:darwin": "npx cross-env-shell NODE_ENV=production \"npm run build && npm run pack:darwin\"",
-    "release:all": "npx cross-env-shell NODE_ENV=production \"npm run build && npm run pack:all\"",
-    "publish": "npx cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack\"",
-    "publish:linux": "npx cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:linux\"",
-    "publish:win32": "npx cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:win32\"",
-    "publish:darwin": "npx cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:darwin\"",
-    "publish:all": "npx cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:all\""
-  },
-  "author": "Jesper Gustafsson",
-  "license": "MIT",
-  "dependencies": {
-    "chokidar": "3.2.1",
-    "connected-react-router": "6.5.2",
-    "electron-updater": "4.2.0",
-    "fast-xml-parser": "3.12.19",
-    "follow-redirects": "1.7.0",
-    "fs-extra": "8.1.0",
-    "mime": "2.4.4",
-    "node-7z": "1.1.1",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-redux": "7.1.0",
-    "react-router-dom": "5.0.1",
-    "react-virtualized": "9.21.1",
-    "redux": "4.0.4",
-    "redux-devtools-extension": "2.13.8",
-    "typesafe-actions": "4.4.2",
-    "uuid": "3.3.2",
-    "uuid-validate": "0.0.3",
-    "which": "1.3.1",
-    "ws": "7.2.0",
-    "yaml": "1.7.2"
-  },
-  "devDependencies": {
-    "@types/chokidar": "2.1.3",
-    "@types/electron-builder": "2.8.0",
-    "@types/enzyme": "3.10.4",
-    "@types/enzyme-adapter-react-16": "1.0.5",
-    "@types/enzyme-to-json": "1.5.3",
-    "@types/fs-extra": "8.0.0",
-    "@types/jest": "24.0.17",
-    "@types/node": "12.7.0",
-    "@types/mime": "2.0.1",
-    "@types/react": "16.8.24",
-    "@types/react-dom": "16.8.5",
-    "@types/react-redux": "7.1.1",
-    "@types/react-router-dom": "4.3.4",
-    "@types/react-virtualized": "9.21.4",
-    "@types/uuid": "3.4.5",
-    "@types/uuid-validate": "0.0.1",
-    "@types/which": "1.3.1",
-    "@types/ws": "6.0.3",
-    "@types/yaml": "1.2.0",
-    "@typescript-eslint/eslint-plugin": "1.13.0",
-    "@typescript-eslint/parser": "1.13.0",
-    "coveralls": "3.0.9",
-    "cross-env": "5.2.0",
-    "electron": "6.1.5",
-    "electron-builder": "21.2.0",
-    "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.2",
-    "enzyme-to-json": "3.4.3",
-    "eslint": "6.1.0",
-    "eslint-plugin-react": "7.16.0",
-    "gulp": "4.0.2",
-    "jest": "24.8.0",
-    "jest-websocket-mock": "2.0.1",
-    "mock-socket": "9.0.3",
-    "ts-jest": "24.0.2",
-    "ts-loader": "6.0.4",
-    "ts-transform-paths": "2.0.0",
-    "tsconfig-paths-webpack-plugin": "3.2.0",
-    "tslint": "5.18.0",
-    "ttypescript": "1.5.10",
-    "typescript": "3.5.3",
-    "webpack": "4.39.1",
-    "webpack-cli": "3.3.6"
-  },
-  "optionalDependencies": {
-    "fsevents": "2.1.0"
-  }
+   "name": "flashpoint-launcher",
+   "version": "7.0.0",
+   "description": "A desktop application used to browse, manage and play games from BlueMaxima's Flashpoint",
+   "main": "build/main/index.js",
+   "config": {
+      "installed": false
+   },
+   "scripts": {
+      "start": "npx electron ./build/main/index.js",
+      "build": "npx gulp build",
+      "watch": "npx gulp watch",
+      "pack": "npx gulp pack",
+      "test": "npx jest",
+      "lint": "npx eslint ./src/**/*.{ts,tsx} ./tests/**/*.ts ./gulpfile.js",
+      "pack:linux": "npx cross-env PACK_PLATFORM=linux PACK_ARCH=x64 npx gulp pack",
+      "pack:win32": "npx cross-env PACK_PLATFORM=win32 PACK_ARCH=ia32 npx gulp pack",
+      "pack:darwin": "npx cross-env PACK_PLATFORM=darwin PACK_ARCH=x64 npx gulp pack",
+      "pack:all": "npx cross-env PACK_PLATFORM=all PACK_ARCH=all npx gulp pack",
+      "release": "npx cross-env-shell NODE_ENV=production \"npm run build && npm run pack\"",
+      "release:linux": "npx cross-env-shell NODE_ENV=production \"npm run build && npm run pack:linux\"",
+      "release:win32": "npx cross-env-shell NODE_ENV=production \"npm run build && npm run pack:win32\"",
+      "release:darwin": "npx cross-env-shell NODE_ENV=production \"npm run build && npm run pack:darwin\"",
+      "release:all": "npx cross-env-shell NODE_ENV=production \"npm run build && npm run pack:all\"",
+      "publish": "npx cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack\"",
+      "publish:linux": "npx cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:linux\"",
+      "publish:win32": "npx cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:win32\"",
+      "publish:darwin": "npx cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:darwin\"",
+      "publish:all": "npx cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:all\"",
+      "rebuild": "electron-rebuild -f -w sqlite3",
+      "postinstall": "electron-builder install-app-deps"
+   },
+   "author": "Jesper Gustafsson",
+   "license": "MIT",
+   "dependencies": {
+      "chokidar": "3.2.1",
+      "connected-react-router": "6.5.2",
+      "electron-updater": "4.2.0",
+      "fast-xml-parser": "3.12.19",
+      "follow-redirects": "1.7.0",
+      "fs-extra": "8.1.0",
+      "mime": "2.4.4",
+      "mysql": "2.14.1",
+      "node-7z": "1.1.1",
+      "react": "16.8.6",
+      "react-dom": "16.8.6",
+      "react-redux": "7.1.0",
+      "react-router-dom": "5.0.1",
+      "react-virtualized": "9.21.1",
+      "redux": "4.0.4",
+      "redux-devtools-extension": "2.13.8",
+      "reflect-metadata": "0.1.10",
+      "sqlite3": "^4.1.1",
+      "typeorm": "0.2.22",
+      "typesafe-actions": "4.4.2",
+      "uuid": "3.3.2",
+      "uuid-validate": "0.0.3",
+      "which": "1.3.1",
+      "ws": "7.2.0",
+      "yaml": "1.7.2"
+   },
+   "devDependencies": {
+      "@types/chokidar": "2.1.3",
+      "@types/electron-builder": "2.8.0",
+      "@types/enzyme": "3.10.4",
+      "@types/enzyme-adapter-react-16": "1.0.5",
+      "@types/enzyme-to-json": "1.5.3",
+      "@types/fs-extra": "8.0.0",
+      "@types/jest": "24.0.17",
+      "@types/mime": "2.0.1",
+      "@types/node": "^12.7.0",
+      "@types/react": "16.8.24",
+      "@types/react-dom": "16.8.5",
+      "@types/react-redux": "7.1.1",
+      "@types/react-router-dom": "4.3.4",
+      "@types/react-virtualized": "9.21.4",
+      "@types/uuid": "3.4.5",
+      "@types/uuid-validate": "0.0.1",
+      "@types/which": "1.3.1",
+      "@types/ws": "6.0.3",
+      "@types/yaml": "1.2.0",
+      "@typescript-eslint/eslint-plugin": "1.13.0",
+      "@typescript-eslint/parser": "1.13.0",
+      "coveralls": "3.0.9",
+      "cross-env": "5.2.0",
+      "electron": "6.1.5",
+      "electron-builder": "21.2.0",
+      "electron-rebuild": "1.9.0",
+      "enzyme": "3.11.0",
+      "enzyme-adapter-react-16": "1.15.2",
+      "enzyme-to-json": "3.4.3",
+      "eslint": "6.1.0",
+      "eslint-plugin-react": "7.16.0",
+      "gulp": "4.0.2",
+      "jest": "24.8.0",
+      "jest-websocket-mock": "2.0.1",
+      "mock-socket": "9.0.3",
+      "ts-jest": "24.0.2",
+      "ts-loader": "6.0.4",
+      "ts-node": "3.3.0",
+      "ts-transform-paths": "2.0.0",
+      "tsconfig-paths-webpack-plugin": "3.2.0",
+      "tslint": "5.18.0",
+      "ttypescript": "1.5.10",
+      "typescript": "3.7.5",
+      "webpack": "4.39.1",
+      "webpack-cli": "3.3.6"
+   },
+   "optionalDependencies": {
+      "fsevents": "2.1.0"
+   }
 }
