--- a/ormconfig.json
+++ b/ormconfig.json
@@ -7,6 +7,7 @@
    "database": "flashpoint.sqlite",
    "synchronize": true,
    "logging": false,
+   "timezone": "Z",
    "entities": [
       "build/database/entity/**/*.js"
    ],
