--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
       "mysql": "2.14.1",
       "node-7z": "1.1.1",
       "react": "16.8.6",
+      "react-color": "2.18.0",
       "react-dom": "16.8.6",
       "react-redux": "7.1.0",
       "react-router-dom": "5.0.1",
@@ -49,7 +50,7 @@
       "redux": "4.0.4",
       "redux-devtools-extension": "2.13.8",
       "reflect-metadata": "0.1.10",
-      "sqlite3": "^4.1.1",
+      "sqlite3": "4.1.1",
       "typeorm": "0.2.22",
       "typesafe-actions": "4.4.2",
       "uuid": "3.3.2",
@@ -65,8 +66,9 @@
       "@types/fs-extra": "8.0.0",
       "@types/jest": "24.0.17",
       "@types/mime": "2.0.1",
-      "@types/node": "^12.7.0",
+      "@types/node": "12.7.0",
       "@types/react": "16.8.24",
+      "@types/react-color": "3.0.1",
       "@types/react-dom": "16.8.5",
       "@types/react-redux": "7.1.1",
       "@types/react-router-dom": "4.3.4",
