--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "author": "Jesper Gustafsson",
   "license": "MIT",
   "dependencies": {
+    "axios": "0.19.2",
     "chokidar": "3.4.0",
     "connected-react-router": "6.5.2",
     "electron-updater": "4.2.0",
