--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "redux-devtools-extension": "2.13.8",
     "reflect-metadata": "0.1.10",
     "sqlite3": "4.2.0",
+    "tail": "2.0.3",
     "typeorm": "0.2.22",
     "typesafe-actions": "4.4.2",
     "uuid": "3.3.2",
@@ -74,6 +75,7 @@
     "@types/react-redux": "7.1.7",
     "@types/react-router-dom": "4.3.4",
     "@types/react-virtualized": "9.21.9",
+    "@types/tail": "2.0.0",
     "@types/uuid": "3.4.5",
     "@types/uuid-validate": "0.0.1",
     "@types/which": "1.3.2",
