github: Fix up release workflow

--- a/package.json
+++ b/package.json
@@ -7,29 +7,28 @@
     "installed": false
   },
   "scripts": {
-    "start": "npx electron ./build/main/index.js",
-    "build": "npx gulp build",
-    "watch": "npx gulp watch",
-    "pack": "npx gulp pack",
-    "test": "npx jest",
-    "lint": "npx eslint ./src/**/*.{ts,tsx} ./tests/**/*.ts ./gulpfile.js",
-    "pack:linux": "npx cross-env PACK_PLATFORM=linux PACK_ARCH=x64 npx gulp pack",
-    "pack:win32": "npx cross-env PACK_PLATFORM=win32 PACK_ARCH=ia32 npx gulp pack",
-    "pack:darwin": "npx cross-env PACK_PLATFORM=darwin PACK_ARCH=x64 npx gulp pack",
-    "pack:all": "npx cross-env PACK_PLATFORM=all PACK_ARCH=all npx gulp pack",
-    "release": "npx cross-env-shell NODE_ENV=production \"npm run build && npm run pack\"",
-    "release:linux": "npx cross-env-shell NODE_ENV=production \"npm run build && npm run pack:linux\"",
-    "release:win32": "npx cross-env-shell NODE_ENV=production \"npm run build && npm run pack:win32\"",
-    "release:darwin": "npx cross-env-shell NODE_ENV=production \"npm run build && npm run pack:darwin\"",
-    "release:all": "npx cross-env-shell NODE_ENV=production \"npm run build && npm run pack:all\"",
-    "publish": "npx cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack\"",
-    "publish:linux": "npx cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:linux\"",
-    "publish:win32": "npx cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:win32\"",
-    "publish:darwin": "npx cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:darwin\"",
-    "publish:all": "npx cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:all\"",
+    "start": "electron ./build/main/index.js",
+    "build": "gulp build",
+    "watch": "gulp watch",
+    "pack": "gulp pack",
+    "snapshot": "cross-env-shell NODE_ENV=production \"npm run build && npm run pack\"",
+    "test": "jest",
+    "lint": "eslint ./src/**/*.{ts,tsx} ./tests/**/*.ts ./gulpfile.js",
+    "pack:linux": "cross-env PACK_PLATFORM=linux PACK_ARCH=x64 gulp pack",
+    "pack:win32": "cross-env PACK_PLATFORM=win32 PACK_ARCH=ia32 gulp pack",
+    "pack:darwin": "cross-env PACK_PLATFORM=darwin PACK_ARCH=x64 gulp pack",
+    "pack:all": "cross-env PACK_PLATFORM=all PACK_ARCH=all gulp pack",
+    "release": "cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack\"",
+    "release:linux": "cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:linux\"",
+    "release:win32": "cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:win32\"",
+    "release:darwin": "cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:darwin\"",
+    "release:all": "cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:all\"",
     "postinstall": "electron-builder install-app-deps"
   },
-  "author": "Jesper Gustafsson",
+  "author": {
+    "name": "Jesper Gustafsson",
+    "email": "jespergustafssons@gmail.com"
+  },
   "license": "MIT",
   "dependencies": {
     "axios": "0.19.2",
@@ -83,7 +82,7 @@
     "@typescript-eslint/eslint-plugin": "1.13.0",
     "@typescript-eslint/parser": "1.13.0",
     "coveralls": "3.1.0",
-    "cross-env": "5.2.0",
+    "cross-env": "7.0.2",
     "electron": "8.2.3",
     "electron-builder": "22.5.1",
     "enzyme": "3.11.0",
