--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -11,18 +11,24 @@ jobs:
 
     - uses: actions/checkout@v1
 
-    - name: Use Node.js 10.x
+    - name: Use Node.js 14.x
       uses: actions/setup-node@v1
       with:
-        node-version: 10.x
-
-    - name: npm install
+        node-version: 14.x
+    - uses: actions/cache@v2
+      id: cache
+      with:
+        path: | 
+          **/node_modules
+        key: ${{ runner.os }}-${{ hashFiles('package.json') }}
+    - name: Install Dependencies
       run: npm install
-    
+      if: steps.cache.outputs.cache-hit != 'true'
+      env:
+        CI: true
     - name: Run tests
       run: npx jest --coverage --coverageReporters=lcov
       continue-on-error: true
-
     - name: Coveralls
       uses: coverallsapp/github-action@master
       with:
