--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -28,4 +28,4 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
-          eslint_flags: '-c .eslintrc.json ./src/**/*.{ts,tsx} ./gulpfile.js'
+          eslint_flags: 'src/ tests/ ./gulpfile.js'
