--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "pack": "gulp pack",
     "snapshot": "cross-env-shell NODE_ENV=production \"npm run build && npm run pack\"",
     "test": "jest",
-    "lint": "eslint ./src/**/*.{ts,tsx} ./tests/**/*.ts ./gulpfile.js",
+    "lint": "eslint ./src/**/*.{ts,tsx} ./gulpfile.js",
     "pack:linux": "cross-env PACK_PLATFORM=linux PACK_ARCH=x64 gulp pack",
     "pack:win32": "cross-env PACK_PLATFORM=win32 PACK_ARCH=ia32 gulp pack",
     "pack:darwin": "cross-env PACK_PLATFORM=darwin PACK_ARCH=x64 gulp pack",
@@ -79,8 +79,8 @@
     "@types/uuid-validate": "0.0.1",
     "@types/which": "1.3.2",
     "@types/ws": "6.0.3",
-    "@typescript-eslint/eslint-plugin": "1.13.0",
-    "@typescript-eslint/parser": "1.13.0",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
     "coveralls": "3.1.0",
     "cross-env": "7.0.2",
     "electron": "8.2.3",
@@ -89,6 +89,7 @@
     "enzyme-adapter-react-16": "1.15.2",
     "enzyme-to-json": "3.4.4",
     "eslint": "7.2.0",
+    "eslint-plugin-react": "7.20.0",
     "gulp": "4.0.2",
     "jest": "24.8.0",
     "jest-websocket-mock": "2.0.2",
