--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,8 @@
   ],
   "plugins": [
     "react",
-    "@typescript-eslint"
+    "@typescript-eslint",
+    "only-warn"
   ],
   "settings": {
     "react": {
@@ -32,7 +33,8 @@
   },
   "root": true,
   "rules": {
-    "@typescript-eslint/indent": ["error", 2, { 
+    "@typescript-eslint/adjacent-overload-signatures": "off",
+    "@typescript-eslint/indent": ["warn", 2, { 
       "MemberExpression": 0,
       "SwitchCase": 1
     }],
