chore: Release Branch 9.0.0

--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -1,6 +1,12 @@
-on: [push, pull_request]
-
 name: Test Coveralls
+
+on:
+  pull_request:
+    branches: 
+      - *
+  push:
+    branches:
+      - [master, develop]
 
 jobs:
 
