fix: Wildcards in Git Workflows

--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -3,10 +3,11 @@ name: Test Coveralls
 on:
   pull_request:
     branches: 
-      - *
+      - '*'
   push:
     branches:
-      - [master, develop]
+      - master
+      - develop
 
 jobs:
 
