--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -3,7 +3,8 @@ name: Release Status
 on:
   push:
     branches:
-      - [master, release/*]
+      - master 
+      - 'release/**'
 
 jobs:
   release:
