fix: Stop db sync causing migration issues

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,7 +5,7 @@
    "username": "flashpoint",
    "password": "Rw5up8YYxYsbSr",
    "database": "flashpoint.sqlite",
-   "synchronize": true,
+   "synchronize": false,
    "logging": false,
    "timezone": "Z",
    "entities": [
