--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "yaml": "1.10.0"
   },
   "devDependencies": {
+    "@types/electron-devtools-installer": "^2.2.0",
     "@types/enzyme": "3.10.5",
     "@types/enzyme-adapter-react-16": "1.0.6",
     "@types/enzyme-to-json": "1.5.3",
@@ -86,6 +87,7 @@
     "cross-env": "7.0.2",
     "electron": "8.2.3",
     "electron-builder": "22.5.1",
+    "electron-devtools-installer": "^3.1.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
     "enzyme-to-json": "3.4.4",
