--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "@types/fs-extra": "8.1.0",
     "@types/jest": "24.0.17",
     "@types/mime": "2.0.1",
-    "@types/node": "12.7.0",
+    "@types/node": "^12.7.0",
     "@types/react": "16.9.34",
     "@types/react-color": "3.0.1",
     "@types/react-dom": "16.9.7",
