--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "reflect-metadata": "0.1.10",
     "sqlite3": "4.2.0",
     "tail": "2.0.3",
+    "tree-kill": "^1.2.2",
     "typeorm": "0.2.22",
     "typesafe-actions": "4.4.2",
     "uuid": "3.3.2",
