--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "axios": "0.19.2",
     "connected-react-router": "6.8.0",
     "electron-updater": "4.3.1",
+    "electron-util": "^0.14.2",
     "fast-xml-parser": "3.16.0",
     "follow-redirects": "1.11.0",
     "fs-extra": "8.1.0",
