--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "axios": "0.19.2",
     "connected-react-router": "6.8.0",
     "electron-updater": "4.3.1",
-    "electron-util": "^0.14.2",
+    "electron-util": "0.14.2",
     "fast-xml-parser": "3.16.0",
     "follow-redirects": "1.11.0",
     "fs-extra": "8.1.0",
@@ -53,7 +53,7 @@
     "reflect-metadata": "0.1.10",
     "sqlite3": "4.2.0",
     "tail": "2.0.3",
-    "tree-kill": "^1.2.2",
+    "tree-kill": "1.2.2",
     "typeorm": "0.2.22",
     "typesafe-actions": "4.4.2",
     "uuid": "3.3.2",
@@ -105,7 +105,7 @@
     "tsconfig-paths-webpack-plugin": "3.2.0",
     "tslint": "5.18.0",
     "ttypescript": "1.5.10",
-    "typedoc": "^0.17.8",
+    "typedoc": "0.17.8",
     "typescript": "3.9.2",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.11"
