feat: GameData events
fixes missing htdocsServerPath in ext api
fixes allowing onWillLaunchGame to fail

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     },
     "plugins": [
       {
-          "transform": "ts-transform-paths",
+        "name": "empty",
+        "transform": "ts-transform-paths",
       }
     ]
   },
