--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "electron-updater": "4.3.1",
     "electron-util": "0.14.2",
     "fast-xml-parser": "3.16.0",
-    "follow-redirects": "1.11.0",
+    "follow-redirects": "^1.11.0",
     "fs-extra": "8.1.0",
     "mime": "2.4.4",
     "node-7z": "1.1.1",
