feat: Reimpl curate warnings
feat: Fleshed out curate addapp rendering

feat: Select new curation when it's made

refactor: Make suggestions a state var in back

--- a/src/shared/tsconfig.json
+++ b/src/shared/tsconfig.json
@@ -6,5 +6,5 @@
   "include": [
     "../../typings/**/*",
     "./**/*", "../database/entity/Game.ts", "../database/entity/AdditionalApp.ts"
-  ]
+, "../renderer/util/curate.ts"  ]
 }
