--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "sqlite3": "4.2.0",
     "tail": "2.0.3",
     "tree-kill": "1.2.2",
-    "typeorm": "0.2.22",
+    "typeorm": "^0.2.36",
     "typesafe-actions": "4.4.2",
     "uuid": "3.3.2",
     "uuid-validate": "0.0.3",
@@ -86,7 +86,7 @@
     "coveralls": "3.1.0",
     "cross-env": "7.0.2",
     "electron": "8.5.5",
-    "electron-builder": "22.5.1",
+    "electron-builder": "^22.12.0",
     "electron-devtools-installer": "3.1.1",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
