--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "@typescript-eslint/parser": "3.3.0",
     "coveralls": "3.1.0",
     "cross-env": "7.0.2",
-    "electron": "^11.5.0",
+    "electron": "11.5.0",
     "electron-builder": "22.5.1",
     "electron-devtools-installer": "3.1.1",
     "enzyme": "3.11.0",
