--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
-    "axios": "0.21.2",
+    "axios": "0.21.4",
     "connected-react-router": "6.8.0",
     "electron-updater": "4.3.1",
     "electron-util": "0.14.2",
     "fast-xml-parser": "3.16.0",
-    "follow-redirects": "^1.11.0",
+    "follow-redirects": "1.14.4",
     "fs-extra": "8.1.0",
     "mime": "2.4.4",
     "node-7z": "1.1.1",
@@ -90,8 +90,8 @@
     "@typescript-eslint/parser": "3.3.0",
     "coveralls": "3.1.0",
     "cross-env": "7.0.2",
-    "electron": "11.5.0",
-    "electron-builder": "22.5.1",
+    "electron": "12.2.1",
+    "electron-builder": "22.11.7",
     "electron-devtools-installer": "3.1.1",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
@@ -111,7 +111,7 @@
     "ttypescript": "1.5.10",
     "typedoc": "0.17.8",
     "typescript": "3.9.2",
-    "webpack": "4.43.0",
+    "webpack": "4.46.0",
     "webpack-cli": "3.3.11"
   },
   "optionalDependencies": {
