Update package-lock.json format; add crc and plist modules for release:darwin

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@fortawesome/react-fontawesome": "^0.1.15",
     "axios": "0.21.4",
     "connected-react-router": "6.8.0",
+    "crc": "^4.1.0",
     "electron-updater": "4.3.1",
     "electron-util": "0.14.2",
     "fast-xml-parser": "3.16.0",
@@ -44,6 +45,7 @@
     "fs-extra": "8.1.0",
     "mime": "2.4.4",
     "node-7z": "1.1.1",
+    "plist": "^3.0.4",
     "react": "16.13.1",
     "react-color": "2.18.0",
     "react-dom": "16.13.1",
