--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@electron/remote": "2.0.8",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
@@ -40,7 +41,7 @@
     "electron-updater": "4.3.1",
     "electron-util": "0.14.2",
     "fast-xml-parser": "3.16.0",
-    "follow-redirects": "1.14.4",
+    "follow-redirects": "1.14.8",
     "fs-extra": "8.1.0",
     "mime": "2.4.4",
     "node-7z": "1.1.1",
@@ -90,8 +91,8 @@
     "@typescript-eslint/parser": "3.3.0",
     "coveralls": "3.1.0",
     "cross-env": "7.0.2",
-    "electron": "12.2.1",
-    "electron-builder": "22.11.7",
+    "electron": "17.1.2",
+    "electron-builder": "22.14.13",
     "electron-devtools-installer": "3.1.1",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
