feat: Shortcuts on Curate page
feat: Add curation refresh to api

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "16.13.1",
     "react-color": "2.18.0",
     "react-dom": "16.13.1",
+    "react-keybind": "^0.9.4",
     "react-markdown": "^7.0.1",
     "react-redux": "7.2.0",
     "react-router-dom": "5.1.2",
