--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "axios": "0.21.4",
+    "better-sqlite3": "^7.5.0",
     "connected-react-router": "6.8.0",
     "electron-updater": "4.3.1",
     "electron-util": "0.14.2",
@@ -57,7 +58,6 @@
     "redux-devtools-extension": "2.13.8",
     "reflect-metadata": "0.1.10",
     "remark-gfm": "^2.0.0",
-    "sqlite3": "^5.0.2",
     "tail": "2.0.3",
     "typeorm": "0.2.37",
     "typesafe-actions": "4.4.2",
