fix: manually implement tree kill
This is a first try for making process killing work on mac and linux.
It is so far only tested on linux, but I'll test it on mac and windows
soon.
It turns out that this requires making the kill() and restart()
functions into async's - before, it looks like it was exiting before
the services could get killed, not sure how. Anyway, awaiting some
stuff seems to have fixed that.

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "fs-extra": "8.1.0",
     "mime": "2.4.4",
     "node-7z": "1.1.1",
+    "ps-tree": "^1.2.0",
     "react": "16.13.1",
     "react-color": "2.18.0",
     "react-dom": "16.13.1",
@@ -58,7 +59,6 @@
     "remark-gfm": "^2.0.0",
     "sqlite3": "4.2.0",
     "tail": "2.0.3",
-    "tree-kill": "1.2.2",
     "typeorm": "0.2.37",
     "typesafe-actions": "4.4.2",
     "uuid": "3.3.2",
@@ -76,6 +76,7 @@
     "@types/jest": "24.0.17",
     "@types/mime": "2.0.1",
     "@types/node": "14.14.31",
+    "@types/ps-tree": "^1.1.2",
     "@types/react": "16.9.34",
     "@types/react-color": "3.0.1",
     "@types/react-dom": "16.9.7",
