wip: Metadata Providers + Directus

--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
     "watch": "gulp watch",
     "pack": "gulp pack",
     "snapshot": "cross-env-shell NODE_ENV=production \"npm run build && npm run pack\"",
+    "snapshot:ia32": "cross-env-shell NODE_ENV=production \"npm run build && npm run pack:ia32\"",
+    "snapshot:x64": "cross-env-shell NODE_ENV=production \"npm run build && npm run pack:x64\"",
+    "snapshot:armv7l": "cross-env-shell NODE_ENV=production \"npm run build && npm run pack:armv7l\"",
+    "snapshot:arm64": "cross-env-shell NODE_ENV=production \"npm run build && npm run pack:arm64\"",
     "test": "jest",
     "lint": "eslint ./src/**/*.{ts,tsx} ./gulpfile.js",
-    "pack:linux": "cross-env PACK_PLATFORM=linux PACK_ARCH=x64 gulp pack",
-    "pack:win32": "cross-env PACK_PLATFORM=win32 PACK_ARCH=ia32 gulp pack",
-    "pack:darwin": "cross-env PACK_PLATFORM=darwin PACK_ARCH=x64 gulp pack",
-    "pack:all": "cross-env PACK_PLATFORM=all PACK_ARCH=all gulp pack",
+    "pack:ia32": "cross-env PACK_ARCH=ia32 gulp pack",
+    "pack:x64": "cross-env PACK_ARCH=x64 gulp pack",
+    "pack:armv7l": "cross-env PACK_ARCH=armv7l gulp pack",
+    "pack:arm64": "cross-env PACK_ARCH=arm64 gulp pack",
     "release": "cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack\"",
-    "release:linux": "cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:linux\"",
-    "release:win32": "cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:win32\"",
-    "release:darwin": "cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:darwin\"",
-    "release:all": "cross-env-shell NODE_ENV=production PUBLISH=true \"npm run build && npm run pack:all\"",
-    "postinstall": "electron-builder install-app-deps"
+    "postinstall": "electron-builder install-app-deps && node ./postinstall.mjs"
   },
   "author": {
     "name": "Jesper Gustafsson",
@@ -57,7 +57,7 @@
     "redux-devtools-extension": "2.13.8",
     "reflect-metadata": "0.1.10",
     "remark-gfm": "^2.0.0",
-    "sqlite3": "4.2.0",
+    "sqlite3": "5.0.8",
     "tail": "2.0.3",
     "typeorm": "0.2.37",
     "typesafe-actions": "4.4.2",
