--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -35,7 +35,7 @@ jobs:
           **/node_modules
         key: ${{ runner.os }}-${{ hashFiles('package.json') }}
     - name: Install Dependencies
-      run: npm install
+      run: npm install --force
       if: steps.cache.outputs.cache-hit != 'true'
       env:
         CI: true
