--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "target": "esnext",
     "lib": ["es6", "es2015", "dom"],
     "strict": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
@@ -20,13 +20,7 @@
       "@renderer/*": [ "./src/renderer/*" ],
       "@database/*": [ "./src/database/*" ],
       "@tests/*": [ "./tests/*" ],
-    },
-    "plugins": [
-      {
-        "name": "empty",
-        "transform": "ts-transform-paths",
-      }
-    ]
+    }
   },
   "exclude": [
     "node_modules",
