--- a/.swcrc
+++ b/.swcrc
@@ -1,4 +1,9 @@
 {
+  "exclude": [
+    "src/main/**",
+    "src/back/**",
+    "tests/**"
+  ],
   "jsc": {
     "parser": {
       "syntax": "typescript",
