--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   "devDependencies": {
     "@swc/cli": "0.1.57",
     "@swc/core": "1.2.205",
+    "@types/better-sqlite3": "7.5.0",
     "@types/electron-devtools-installer": "2.2.0",
     "@types/follow-redirects": "1.8.0",
     "@types/fs-extra": "8.1.0",
@@ -91,6 +92,7 @@
     "@types/ws": "6.0.3",
     "@typescript-eslint/eslint-plugin": "3.3.0",
     "@typescript-eslint/parser": "3.3.0",
+    "better-sqlite3": "^7.5.3",
     "chokidar": "^3.5.3",
     "coveralls": "3.1.0",
     "cross-env": "7.0.2",
