refactor: Revert to ttsc for backend building

--- a/package.json
+++ b/package.json
@@ -107,9 +107,11 @@
     "ts-jest": "28.0.3",
     "ts-loader": "9.3.0",
     "ts-node": "10.8.0",
+    "ts-transform-paths": "^2.0.3",
     "tsconfig-paths-webpack-plugin": "3.2.0",
     "tslint": "5.18.0",
     "tswc": "^1.1.1",
+    "ttypescript": "^1.5.13",
     "typedoc": "0.22.15",
     "typescript": "4.6.2",
     "webpack": "5.72.1",
