feat: GOTD Datepicker

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ps-tree": "1.2.0",
     "react": "17.0.2",
     "react-color": "2.18.0",
+    "react-datepicker": "4.8.0",
     "react-dom": "17.0.2",
     "react-keybind": "0.9.4",
     "react-markdown": "7.0.1",
@@ -82,6 +83,7 @@
     "@types/ps-tree": "1.1.2",
     "@types/react": "17.0.2",
     "@types/react-color": "3.0.1",
+    "@types/react-datepicker": "4.8.0",
     "@types/react-dom": "17.0.2",
     "@types/react-redux": "7.1.7",
     "@types/react-router-dom": "5.1.7",
